--- a/angular/symphony/src/app/admin/views/course-module/course-module.component.html
+++ b/angular/symphony/src/app/admin/views/course-module/course-module.component.html
@@ -15,7 +15,7 @@
   
             <ng-container matColumnDef="Module Name">
               <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let element">{{ element.module_name }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
   
             <ng-container matColumnDef="Amount">
@@ -23,24 +23,14 @@
               <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
             </ng-container>
   
-            <ng-container matColumnDef="Active">
-              <th mat-header-cell *matHeaderCellDef>Active</th>
-              <td mat-cell *matCellDef="let element">{{ element.active }}</td>
+            <ng-container matColumnDef="Description">
+              <th mat-header-cell *matHeaderCellDef>Description</th>
+              <td mat-cell *matCellDef="let element">{{ element.description }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Course">
               <th mat-header-cell *matHeaderCellDef>Course</th>
-              <td mat-cell *matCellDef="let element">{{ element.course_id }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Created at">
-              <th mat-header-cell *matHeaderCellDef>Create at</th>
-              <td mat-cell *matCellDef="let element">{{ element.create_at }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Update at">
-              <th mat-header-cell *matHeaderCellDef>Update at</th>
-              <td mat-cell *matCellDef="let element">{{ element.update_at }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.course }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Action">
