--- a/angular/symphony/src/app/admin/views/course-module/dialog-course-module/dialog-course-module.component.html
+++ b/angular/symphony/src/app/admin/views/course-module/dialog-course-module/dialog-course-module.component.html
@@ -16,11 +16,11 @@
         <div class="dialog__body">
 
             <div class="form-group">
-                <label for="module_name">Module Name</label>
-                <input type="text" class="form-control" id="module_name" required [(ngModel)]="module.module_name"
-                    name="module_name" #moduleName="ngModel" />
-                <div *ngIf="moduleName.invalid && moduleName.touched" class="alert alert-danger">
-                    Module name is required.
+                <label for="name">Module Name</label>
+                <input type="text" class="form-control" id="name" required [(ngModel)]="module.name"
+                    name="name" #name="ngModel" />
+                <div *ngIf="name.invalid && name.touched" class="alert alert-danger">
+                    name name is required.
                 </div>
             </div>
 
@@ -28,19 +28,25 @@
                 <label for="amount">Amount</label>
                 <input type="text" class="form-control" id="amount" required [(ngModel)]="module.amount" name="amount"
                     #amount="ngModel" />
-                <div *ngIf="moduleName.invalid && moduleName.touched" class="alert alert-danger">
-                    Module name is required.
+                <div *ngIf="amount.invalid && amount.touched" class="alert alert-danger">
+                    amount name is required.
                 </div>
             </div>
 
             <div class="form-group">
-                <label for="acitve">Active</label>
-                <select class="form-control" id="active" required [(ngModel)]="module.active" name="active" #active="ngModel">
-                    <option value="true">True</option>
-                    <option value="false">False</option>
-                </select>
-                <div *ngIf="active.invalid && active.touched" class="alert alert-danger">
-                    Active is required.
+                <label for="acitve">Description</label>
+                <input type="text" class="form-control" id="description" required [(ngModel)]="module.description" name="description"
+                #description="ngModel" />
+                <div *ngIf="description.invalid && description.touched" class="alert alert-danger">
+                    description is required.
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="acitve">Course</label>
+                <input type="text" class="form-control" id="course" required [(ngModel)]="module.course" name="course"
+                #course="ngModel" />
+                <div *ngIf="course.invalid && course.touched" class="alert alert-danger">
+                    course is required.
                 </div>
             </div>
         </div>
