--- a/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
+++ b/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
@@ -8,6 +8,7 @@
       <div class="manage__admin-table">
         <div class="mat-elevation-z8">
           <table mat-table [dataSource]="dataSource">
+
             <ng-container matColumnDef="No">
               <th mat-header-cell *matHeaderCellDef>No.</th>
               <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
@@ -15,7 +16,7 @@
   
             <ng-container matColumnDef="Name">
               <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let element">{{ element.module_name }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Code">
@@ -32,15 +33,20 @@
                 <th mat-header-cell *matHeaderCellDef>Discount</th>
                 <td mat-cell *matCellDef="let element">{{ element.discount }}</td>
               </ng-container>
-  
-              <ng-container matColumnDef="Description">
-                <th mat-header-cell *matHeaderCellDef>Description</th>
-                <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-              </ng-container>
 
             <ng-container matColumnDef="BackgoundImage">
               <th mat-header-cell *matHeaderCellDef>BackgoundImage</th>
-              <td mat-cell *matCellDef="let element">{{ element.backGroundImage }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.thumbnail }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Start date">
+              <th mat-header-cell *matHeaderCellDef>Start date</th>
+              <td mat-cell *matCellDef="let element">{{ element.startedDate }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="End date">
+              <th mat-header-cell *matHeaderCellDef>End date</th>
+              <td mat-cell *matCellDef="let element">{{ element.endedDate }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Active">
