--- a/angular/symphony/src/app/admin/views/student/dialog-student/dialog-student.component.html
+++ b/angular/symphony/src/app/admin/views/student/dialog-student/dialog-student.component.html
@@ -16,11 +16,11 @@
         <div class="dialog__body">
 
             <div class="form-group">
-                <label for="username">Name</label>
-                <input type="text" class="form-control" id="username" required [(ngModel)]="student.username"
-                    name="username" #username="ngModel"/>
-                <div *ngIf="username.invalid && username.touched" class="alert alert-danger">
-                    username name is required.
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" required [(ngModel)]="student.name"
+                    name="name" #name="ngModel"/>
+                <div *ngIf="name.invalid && name.touched" class="alert alert-danger">
+                    name name is required.
                 </div>
             </div>
 
@@ -30,23 +30,6 @@
                     #email="ngModel" /> 
                 <div *ngIf="email.invalid && email.touched" class="alert alert-danger">
                     email name is required.
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="roll_number">Roll number</label>
-                <input type="text" class="form-control" id="roll_number" required [(ngModel)]="student.roll_number" name="roll_number"
-                #roll_number="ngModel" /> 
-                <div *ngIf="roll_number.invalid && roll_number.touched" class="alert alert-danger">
-                    Roll number is required.
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="text" class="form-control" id="password" required [(ngModel)]="student.password" name="password"
-                #password="ngModel" /> 
-                <div *ngIf="password.invalid && password.touched" class="alert alert-danger">
-                    password number is required.
                 </div>
             </div>
         </div>
