--- a/angular/symphony/src/app/admin/views/student/student.component.html
+++ b/angular/symphony/src/app/admin/views/student/student.component.html
@@ -15,7 +15,7 @@
   
             <ng-container matColumnDef="Name">
               <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let element">{{ element.username }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
   
             <ng-container matColumnDef="Email">
@@ -25,22 +25,7 @@
   
             <ng-container matColumnDef="Roll number">
               <th mat-header-cell *matHeaderCellDef>Roll number</th>
-              <td mat-cell *matCellDef="let element">{{ element.roll_number }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Password">
-                <th mat-header-cell *matHeaderCellDef>Password</th>
-                <td mat-cell *matCellDef="let element">{{ element.password }}</td>
-              </ng-container>
-
-            <ng-container matColumnDef="Created at">
-              <th mat-header-cell *matHeaderCellDef>Create at</th>
-              <td mat-cell *matCellDef="let element">{{ element.created_at }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Update at">
-              <th mat-header-cell *matHeaderCellDef>Update at</th>
-              <td mat-cell *matCellDef="let element">{{ element.updated_at }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.rollNumber }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Action">
@@ -48,7 +33,7 @@
               <td mat-cell *matCellDef="let element">
                 <div class="action__table">
                   <button class="btn__edit" (click)="openEditDialog(element)">Edit</button>
-                  <button class="btn__delete" (click)="handleDelete(element.id)">Delete</button>
+                  <button class="btn__delete" (click)="handleDelete(element.rollNumber)">Delete</button>
                 </div>
               
               </td>
