--- a/angular/symphony/src/app/user/components/layout/header/header.component.html
+++ b/angular/symphony/src/app/user/components/layout/header/header.component.html
@@ -85,8 +85,8 @@
                                 *ngFor="let items of list_menu"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52657"
                               >
-                                <a>{{ items.Name }}</a>
-                                @if (items.Child.length >0) {
+                                <a>{{ items.name }}</a>
+                                <!-- @if (items.Child.length >0) {
                                 <ul class="sub-menu">
                                   <li
                                     *ngFor="let item of items.Child"
@@ -97,8 +97,8 @@
                                 </ul>
                                 <span class="eael-simple-menu-indicator">
                                   <i class="fas fa-chevron-down"></i
-                                ></span>
-                                }
+                                ></span> 
+                                }-->
                               </li>
                             </ul>
                             <span class="eael-simple-menu-indicator">
