--- a/angular/symphony/src/app/admin/views/contact-us/contact-us.component.html
+++ b/angular/symphony/src/app/admin/views/contact-us/contact-us.component.html
@@ -7,7 +7,7 @@
     <div class="manage__admin-list">
       <div class="manage__admin-table">
         <div class="mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource">
+          <table mat-table [dataSource]="courseModules">
             <ng-container matColumnDef="No">
               <th mat-header-cell *matHeaderCellDef>No.</th>
               <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
@@ -26,16 +26,6 @@
             <ng-container matColumnDef="Hotline">
               <th mat-header-cell *matHeaderCellDef>Hotline</th>
               <td mat-cell *matCellDef="let element">{{ element.hotline }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Created at">
-              <th mat-header-cell *matHeaderCellDef>Create at</th>
-              <td mat-cell *matCellDef="let element">{{ element.created_at }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Update at">
-              <th mat-header-cell *matHeaderCellDef>Update at</th>
-              <td mat-cell *matCellDef="let element">{{ element.updated_at }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Action">
