--- a/angular/symphony/src/app/admin/views/student/dialog-student/dialog-student.component.html
+++ b/angular/symphony/src/app/admin/views/student/dialog-student/dialog-student.component.html
@@ -32,6 +32,16 @@
                     email name is required.
                 </div>
             </div>
+
+            <div class="form-group" *ngIf="is_edit">
+                <label for="rollNumber">Roll number</label>
+                <input type="text" class="form-control" id="rollNumber" required [(ngModel)]="student.rollNumber" name="rollNumber"
+                    #rollNumber="ngModel" /> 
+                <div *ngIf="rollNumber.invalid && rollNumber.touched" class="alert alert-danger">
+                    rollNumber name is required.
+                </div>
+            </div>
+
         </div>
         <div class="dialog__footer">
             <div class="dialog__footer-btn">
