--- a/angular/symphony/src/app/user/components/layout/footer/footer.component.html
+++ b/angular/symphony/src/app/user/components/layout/footer/footer.component.html
@@ -3,23 +3,27 @@
     <div class="row">
       <div class="col-12 row">
         <div class="col-3">
-          <img style="width: 100%;margin-bottom: 15px;" class="logo-aptech" src="/assets/images/logo-aptech.png" />
+          <img
+            style="width: 100%; margin-bottom: 15px"
+            class="logo-aptech"
+            src="/assets/images/logo-aptech.png"
+          />
           <p>
-            Hanoi-Aptech với hơn 22 năm kinh nghiệm đào tạo Lập trình viên
-            (thành lập năm 2001) tự hào là nhà cung cấp dịch vụ đào tạo Công
-            nghệ thông tin hàng đầu tại Việt Nam cấp bằng Quốc Tế.
+            Symphony, with over 22 years of experience in training
+            programmers (established in 2001), proudly stands as a leading
+            provider of Information Technology training services in Vietnam,
+            offering internationally recognized certifications
           </p>
         </div>
         <div class="col-3">
-          <h2 class="title">Liên hệ</h2>
+          <h2 class="title">Contact</h2>
           <ul class="elementor-icon-list-items">
             <li class="elementor-icon-list-item">
               <span class="elementor-icon-list-icon">
                 <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
               </span>
               <span class="elementor-icon-list-text"
-                >Địa chỉ: Tầng 1, Tòa C5, Cổng sau Đại học Thủy Lợi, 175 Tây
-                Sơn, Đống Đa, Hà Nội</span
+                >Địa chỉ: {{contact?.address}}</span
               >
             </li>
             <li class="elementor-icon-list-item">
@@ -27,19 +31,19 @@
                 <i aria-hidden="true" class="fas fa-phone-alt"></i>
               </span>
               <span class="elementor-icon-list-text"
-                >Hotline: 0382 020 858</span
+                >Hotline: {{contact?.hotline}}</span
               >
             </li>
             <li class="elementor-icon-list-item">
               <span class="elementor-icon-list-icon">
                 <i aria-hidden="true" class="far fa-envelope"></i>
               </span>
-              <span class="elementor-icon-list-text">Email: info.vn</span>
+              <span class="elementor-icon-list-text">Email: {{contact?.email}}</span>
             </li>
           </ul>
         </div>
         <div class="col-3">
-          <h2 class="title">Nổi bật</h2>
+          <h2 class="title">Prominent</h2>
           <ul class="elementor-icon-list-items">
             <li class="elementor-icon-list-item">
               <a
@@ -48,7 +52,7 @@
                   <i aria-hidden="true" class="fas fa-circle"></i>
                 </span>
                 <span class="elementor-icon-list-text"
-                  >Học bổng Aptech-Hanoi 2024</span
+                  >Scholarship Symphony 2024</span
                 >
               </a>
             </li>
@@ -58,7 +62,7 @@
                 ><span class="elementor-icon-list-icon">
                   <i aria-hidden="true" class="fas fa-circle"></i>
                 </span>
-                <span class="elementor-icon-list-text">Giới thiệu</span>
+                <span class="elementor-icon-list-text">introduction</span>
               </a>
             </li>
             <li class="elementor-icon-list-item">
@@ -67,7 +71,7 @@
                   <i aria-hidden="true" class="fas fa-circle"></i>
                 </span>
                 <span class="elementor-icon-list-text"
-                  >Chương trình đào tạo</span
+                  >Curricclum</span
                 >
               </a>
             </li>
@@ -76,13 +80,13 @@
                 ><span class="elementor-icon-list-icon">
                   <i aria-hidden="true" class="fas fa-circle"></i>
                 </span>
-                <span class="elementor-icon-list-text">Tin tức sự kiện</span>
+                <span class="elementor-icon-list-text">Event news</span>
               </a>
             </li>
           </ul>
         </div>
         <div class="col-3">
-          <h2 class="title">Theo dõi</h2>
+          <h2 class="title">Follow</h2>
           <ul class="ekit_social_media">
             <li class="elementor-repeater-item-09459c9">
               <img src="/assets/images/icon-facebook.png" />
