--- a/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
+++ b/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
@@ -6,7 +6,7 @@
         <div class="row">
           <div class="col-4" *ngFor="let partner of list_course">
             <div class="">
-              <img [src]="partner.image" alt="" style="width: 100%" />
+              <img [src]="partner.thumbnail" alt="" style="width: 100%;height: 300px;" />
               <p class="title-course">{{ partner.name }}</p>
               <p class="elementor-image-box-description">
                 {{ partner.description }}
@@ -14,7 +14,7 @@
               <div>
                 <ul class="elementor-icon-list-items">
                   <li class="elementor-icon-list-item">
-                    <a href="https://aptech.vn/tuyensinh"
+                    <a href=""
                       ><span class="elementor-icon-list-icon">
                         <i aria-hidden="true" class="fas fa-gift"></i>
                       </span>
@@ -24,22 +24,22 @@
                     </a>
                   </li>
                   <li class="elementor-icon-list-item">
-                    <a href="https://aptech.vn/tuyensinh"
+                    <a href=""
                       ><span class="elementor-icon-list-icon">
                         <i aria-hidden="true" class="fas fa-clock"></i>
                       </span>
                       <span class="elementor-icon-list-text"
-                        >Opening: {{ partner.start_time }}</span
+                        >Opening: {{ partner.startedDate }}</span
                       >
                     </a>
                   </li>
                   <li class="elementor-icon-list-item">
-                    <a href="https://aptech.vn/tuyensinh"
+                    <a href=""
                       ><span class="elementor-icon-list-icon">
                         <i aria-hidden="true" class="fas fa-bookmark"></i>
                       </span>
                       <span class="elementor-icon-list-text"
-                        >Duration: 2 - 2.5 năm</span
+                        >Duration: {{partner.numberOfDay}} day</span
                       >
                     </a>
                   </li>
