--- a/angular/symphony/src/app/admin/views/manager-course/dialog-course/dialog-course.component.html
+++ b/angular/symphony/src/app/admin/views/manager-course/dialog-course/dialog-course.component.html
@@ -170,7 +170,7 @@
           class="form-control"
           id="feeChardeDate"
           rows="4"
-          [(ngModel)]="course.feeChardeDate"
+          [(ngModel)]="course.feeChargeDate"
           name="feeChardeDate"
           #feeChardeDate="ngModel"
           type="date"
