--- a/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
+++ b/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
@@ -35,25 +35,9 @@
               </ng-container>
 
             <ng-container matColumnDef="BackgoundImage">
-              <th mat-header-cell *matHeaderCellDef>BackgoundImage</th>
-              <td mat-cell *matCellDef="let element">{{ element.thumbnail }}</td>
+              <th mat-header-cell *matHeaderCellDef >BackgoundImage</th>
+              <td mat-cell *matCellDef="let element" style="width: 35%;"><img width="30%" [src]="element.thumbnail "alt=""></td>
             </ng-container>
-
-            <ng-container matColumnDef="Start date">
-              <th mat-header-cell *matHeaderCellDef>Start date</th>
-              <td mat-cell *matCellDef="let element">{{ element.startedDate }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="End date">
-              <th mat-header-cell *matHeaderCellDef>End date</th>
-              <td mat-cell *matCellDef="let element">{{ element.endedDate }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="Active">
-                <th mat-header-cell *matHeaderCellDef>Active</th>
-                <td mat-cell *matCellDef="let element">{{ element.active }}</td>
-              </ng-container>
-  
 
             <ng-container matColumnDef="Action">
               <th mat-header-cell *matHeaderCellDef>Action</th>
